fix: remove gitcus comment and fix header-to-date-published gap

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -155,6 +155,10 @@ body {
     padding:0 7em;
     }
 
+#blog .post-header {
+    margin:0 0 var(--vr-3) 0;
+    }
+
 h1 {
     margin:.3em 0;
     font-size:3em;
@@ -193,6 +197,10 @@ h2 {
 #blog h2 {
     border-bottom:2px solid var(--h2-border);
     padding-bottom:.3em;
+    }
+
+#blog .post-header h2 {
+    margin:0 0 var(--vr-1) 0;
     }
 
 h3 {
@@ -246,10 +254,9 @@ td.shade {
     background-color:var(--shade);
     }
 
-#blog .post {
-    margin:0 0 var(--vr-3) 0;
-    padding:var(--vr-1) 0 0;
-    border-top:0;
+#blog .post-meta {
+    margin:0;
+    padding:0;
     font-size:1em;
     color:var(--post-meta);
     }
